--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         // Replace the URL below with your actual Koyeb backend URL
         const BACKEND_URL = window.location.hostname === 'localhost' 
             ? 'http://localhost:8000' 
-            : 'https://YOUR-BACKEND-NAME.koyeb.app'; // ← REPLACE WITH YOUR KOYEB URL
+            : 'https://microeconomicsai-solver.onrender.com'; // ← REPLACE WITH YOUR KOYEB URL
         
         // API Keys Management
         function saveApiKey(provider) {
